# SmallNN

./: CMakeLists.txt  Common.h  LICENSE  README.md  SmallNN.cpp
DesignPatterns/: Factory.cpp
NetConfigs/: Default.netcf  NetConfigTemplate.netcf
NeuralNetwork/: ActivationFunction.h  ActivationFunctionFactory.h  Estimate.h  LossFunction.cpp  LossFunction.h  LossFunctionFactory.h  NetTelemetry.cpp  NetTelemetry.h  NeuralNetwork.h  TrainingTelemetry.cpp  TrainingTelemetry.h
NeuralNetwork/Blobs/: DataTransformation.cpp  OriginalSample.h  TranslationUnit.cpp
NeuralNetwork/Layers/: ConvolutionalLayer.cpp  DeconvolutionalLayer.cpp  Layer.cpp  LayerFactory.h
WrappersAndServices/: FStreamInterface.cpp  WindowsWrappers.cpp  WindowsWrappers.h
include/: Common.h
include/3party/CvPlot/CvPlot/inc/CvPlot/imp/: DrawableDeque.ipp  XAxis.ipp
include/3party/avir/: README.md
include/DesignPatterns/: Command.h  Factoty.h
include/NeuralNetwork/: ActivationFunction.h  ActivationFunctionFactory.h  CommandParser.h  Estimate.h  LossFunction.h  LossFunctionFactory.h  NetState.h  NetTelemetry.h  NeuralNetwork.h  Object.h  TrainingTelemetry.h
include/NeuralNetwork/Blobs/: DataBlob.h  DataTransformation.h  OriginalSample.h  TranslationUnit.h
include/NeuralNetwork/Layers/: ConvolutionalLayer.h  DeconvolutionalLayer.h  Layer.h  LayerFactory.h  PoolingLayer.h
include/WrappersAndServices/: FStreamInterface.h
src/NeuralNetwork/: ActivationFunction.cpp  CommandParser.cpp  Estimate.cpp  LossFunction.cpp  NetState.cpp  NetTelemetry.cpp  NeuralNetwork.cpp  TrainingTelemetry.cpp
src/NeuralNetwork/Blobs/: DataBlob.cpp  DataTransformation.cpp  OriginalSample.cpp  TranslationUnit.cpp
src/NeuralNetwork/Layers/: ConvolutionalLayer.cpp  DeconvolutionalLayer.cpp  Layer.cpp  LayerFactory.cpp  PoolingLayer.cpp
